# src/Backend/Models/Course.cs
@@ -4,7 +4,6 @@ using Microsoft.EntityFrameworkCore;
 namespace Backend.Models;
 
 [Table("Courses")]
-[PrimaryKey(nameof(Code), nameof(Year), nameof(SemesterCode))]
 public class Course
 {
     public string Code { get; set; }
@@ -14,8 +13,4 @@ public class Course
     public int SemesterCode { get; set; }
     
     public string Name { get; set; }
-    
-    public List<Student> Students { get; set; }
-    
-    public List<Teacher> Teachers { get; set; }
 }
